--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node-three2",
   "version": "1.0.0",
   "description": "node page",
-  "main": "app.js",
+  "main": "node ./bin/www",
   "scripts": {
-    "test": "node app.js"
+    "start": "node ./bin/www"
   },
   "keywords": [
     "node"
@@ -16,12 +16,13 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "debug": "^4.3.1",
     "ejs": "^2.6.2",
     "express": "^4.16.4",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.16.2",
-    "i18n": "^0.13.3",
-    "mustache": "^4.2.0",
+    "http-errors": "^1.8.0",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.6.1",
     "rimraf": "^3.0.0"
   }
